News file for Stow.

* Changes in version 2.3.2

*** Improved debug output

    Extra output resulting from use of the -v / --verbose flag
    now appears in a more logical and understandable way.

*** Minor janitorial tasks

    Users are not substantially affected by these changes.

***** Added some more information from the web page to the README

***** Added a CONTRIBUTING.md file

***** Removed texinfo.tex from the distribution

      This eliminates existing and future bit-rot.

***** Updated aclocal.m4 from 1.15.1 to 1.16.3

      This mostly just updates copyright notices to 2020, and URLs to https.

***** Replace broken gmane links with links to lists.gnu.org

      [[https://lars.ingebrigtsen.no/2020/01/06/whatever-happened-to-news-gmane-org/][gmane has been dead for quite a while.]]

***** Add support for source navigation in emacs via [[https://github.com/jacktasia/dumb-jump][dumb-jump]].

*** Various maintainer tweaks

    Further improved the release process and its documentation in
    various minor ways.

* Changes in version 2.3.1

*** Remove dependencies on Hash::Merge and Clone::Choose

    stow 2.3.0 added external runtime dependencies on Hash::Merge and
    Clone::Choose. Historically stow hasn't had runtime dependencies
    other than Perl itself, which is a useful property if you're
    managing the installation of Perl using stow; the bootstrapping
    instructions in stow's manual would need updating to describe how
    to install these two modules (and any dependencies they have now
    or in the future) as well.

    However, Hash::Merge is much more general than stow actually
    needs, so replace the merge() call with a few lines of equivalent
    code -- this avoids the external dependencies, and is clearer than
    the merge() call.

    Many thanks to Adam Sampson for this patch!

    https://lists.gnu.org/archive/html/bug-stow/2019-06/msg00001.html

*** Fix an issue with the test suite
